--- a/elements.css
+++ b/elements.css
@@ -1,8 +1,19 @@
 body{
 	margin:0;
 	padding:0;
-	background-image:url('background.jpg');
+	background-image:url('background7.jpg');
 	background-size:cover;
+}
+
+a{
+	display:inline-block;
+	text-decoration:none;
+	border:1px black solid;
+	background-color:black;
+	color:white;
+	padding:10px;
+	font-family:Arial;
+	margin:15px;
 }
 
 .container{
