--- a/elements.css
+++ b/elements.css
@@ -117,12 +117,19 @@ a{
 	color:white;
 }
 
-.top-panel{
-	background-color:#444444;
+.top-panel .centered{
 	display:flex;
 	justify-content:center;
 	align-items:center;
+}
+
+.top-panel{
+	background-color:#444444;
 	padding:20px;
+	display:grid;
+	justify-items:center;
+	grid-template-columns: 1fr auto 1fr;
+
 }
 
 #searh-button{
@@ -141,11 +148,47 @@ a{
 .top-panel h1{
 	font-family:Monospace;
 	color:white;
-	margin-right:20px;
+	justify-self:start;
+	margin-left:50px;
 }
 
 .buttonCheckout{
-	margin:10px;
-	background:black;
+	background:#FFC1CC; border-radius:10px;
+	color:black;
+	font-family:Monospace;
+	font-weight:bold;
+	border:2px black solid;
+}
+
+.link2button{
+	background:#FFC1CC;
+	border-radius:10px;
+	color:black;
+	font-family:Monospace;
+	font-weight:bold;
+	border:2px black solid;
+}
+
+#cart-button-top{
+	justify-self:end;
+	margin-right:50px;
+}
+
+.text{
+	font-family:Monospace;
 	color:white;
+}
+
+.button2checkout{
+	background:#FFC1CC;
+	padding:10px;
+	border-radius:10px;
+	color:black;
+	font-family:Monospace;
+	font-weight:bold;
+	border:2px black solid;
+}
+
+#output1{
+	margin:20px;
 }
