--- a/elements.css
+++ b/elements.css
@@ -96,7 +96,7 @@ a{
 
 .product ul{
 	margin-top:70px;
-	color:black;
+	color:white;
 	font-family:Monospace;
 }
 
@@ -109,6 +109,7 @@ a{
 }
 
 .buttonCart{
+	white-space:nowrap;
 	padding:10px;
 	margin:20px;
 	background:#FFC1CC;
@@ -127,12 +128,11 @@ a{
 
 .top-panel{
 	background-color:#444444;
-	border-bottom:2px black solid;
+	border:1px black solid;
 	padding:20px;
 	display:grid;
 	justify-items:center;
 	grid-template-columns: 1fr auto 1fr;
-
 }
 
 #searh-button{
@@ -197,9 +197,8 @@ a{
 }
 
 #border{
-	border:2px black solid;
-	border-radius:10px;
-	margin:20px;
+	border:1px black solid;
+	margin:10px 50%;
 	padding:20px 600px 20px 40px;
 	background-color:#444444;
 }
