--- a/elements.css
+++ b/elements.css
@@ -196,9 +196,36 @@ a{
 	margin:20px;
 }
 
-#border{
+.border{
 	border:1px black solid;
 	margin:10px 50%;
 	padding:20px 600px 20px 40px;
 	background-color:#444444;
 }
+
+#item{
+	border:2px black solid;
+	border-radius:10px;
+	margin:10px;
+	padding:10px;
+}
+
+#nav-bar{
+	border:2px black solid;
+	background-color:#222222;
+	width:10%;
+	height:100%;
+}
+
+#nav-bar a{
+	width:80px;
+	margin:30px;
+	background:#FFC1CC;
+	border-radius:10px;
+	color:black;
+	font-family:Monospace;
+	font-weight:bold;
+	border:2px black solid;
+	white-space:nowrap;
+}
+
